# cofi

./: README.md  main.cpp  makefile  server.cpp  server2.cpp  server2.h
Server/: CMakeLists.txt
Server/cmake/Modules/: FindPQXX.cmake
Server/header/: HttpUrlParser.h  commandRequest.h  dbconnection.h  server.h  sqlStatement.h
Server/header/protobuf/: command_java.proto
Server/src/: CommandRequest.cpp  DBConnection.cpp  HttpArgumentParser.cpp  Server.cpp  SqlStatement.cpp
client/java/: pom.xml
client/java/src/main/java/de/consistec/: Main.java
client/java/src/main/java/de/consistec/cofi/: CommandProto.java
client/java/src/main/java/de/consistec/controller/: Controller.java
client/java/src/main/java/de/consistec/model/: Command.java
client/java/src/main/resources/fxml/: main.fxml
protobuf/: command.proto  command_java.proto
script/: client_script
sql/: cofi_sql.sh  create_db.sql
sql/test/: cofi_sql_insert.sh  insert.sql
